fixed alignment of audio player on gradin

--- a/styles.css
+++ b/styles.css
@@ -1123,4 +1123,5 @@ audio#mod_solo_passageaudioplayer {
 
 .solo_grading_submissions_container .mod_solo_nativeaudioplayer_cont {
 	width: 100%;
+	text-align: center;
 }
